# 17.1

./: .gitignore  README.md  check_imports.py  pyproject.toml
ecommerce/: db.sqlite3
ecommerce/src/: category.py
src/: base_category.py  base_product.py  category.py  exceptions.py  order.py  print_mixin.py  product.py  product_iterator.py  utils.py
tests/: test_category.py  test_encapsulation.py  test_homework_16_2.py  test_inheritance.py  test_magic.py  test_product.py  test_utils.py
