[project]
name = "ecommerce"
version = "0.1.0"
description = "E-commerce core classes"
authors = [
    {name = "Antigravity"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.0,<9.0.0)",
    "black (>=26.1.0,<27.0.0)"
]
